<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Space\nMessenger</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="sign_out">Выйти из аккаунта</string>
    <string name="astronaut">astronaut</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="enter">Вход</string>
    <string name="come_back">Вернуться назад</string>
    <string name="login">Логин</string>
    <string name="do_not_have_account">У вас нет аккаунта?</string>
    <string name="registration">Регистрация</string>
    <string name="password_again">Повторите пароль</string>
    <string name="not_all_fields_are_filled_in">Заполнены не все поля</string>
    <string name="password_must_match_in_both_fields">Пароль должен совпадать в обоих полях</string>
    <string name="failed_to_register_check_the_validity_of_the_email">Не удалось зарегистрироваться.\nПроверьте корректность введённого Email адреса</string>
    <string name="faild_to_enter_check_validity_of_the_data">Не удалось ввойти.\nПроверьте корректность введённых данных</string>
    <string name="rocket">Ракета</string>
    <string name="success">Успешно</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="space_messenger">SpaceMessenger</string>
    <string name="chats">Чаты</string>
    <string name="groups">Группы</string>
    <string name="contacts">Контакты</string>
    <string name="write_new_message">Написать новое сообщение</string>
    <string name="new_message">Новое сообщение</string>
    <string name="search">Поиск</string>
    <string name="wallpapers">Обои</string>
    <string name="message">Сообщение</string>
    <string name="background">Обои</string>
    <string name="send_message">Отправить сообщение</string>
    <string name="unread_notification">Непрочитанное уведомление</string>
    <string name="antenna">Антенна</string>
    <string name="space_the_final_frontier">Космос - последний рубеж</string>
    <string name="skip">Пропустить</string>
    <string name="walkthroughs_text">Asfjlsdfj sdfj fjfjfdjsfd jsdfnjnfdjsfd jsdfnjnfdjfdsklnknsfjnsdjfnjsdafnjjsdnfjknasdjkfnjjsndfjknasdjfkjksndfjnasdfjkjkasdfjnasdfjjaf</string>
    <string name="paiging">Paiging</string>
    <string name="how_to_look_up">Как посмотреть наверх</string>
    <string name="amazing_hubble">Удивительный Хаббл</string>
    <string name="go">поехали</string>
    <string name="wallpapers1">Обои 1</string>
    <string name="wallpapers2">Обои 2</string>
    <string name="wallpapers3">Обои 3</string>
    <string name="drawer_open">Навигация открыта</string>
    <string name="drawer_close">Навигация закрыта</string>
    <string name="new_group">Новая группа</string>
    <string name="status">Статус</string>
    <string name="invite_friends">Пригласить друзей</string>
    <string name="stickers">Стикеры</string>
    <string name="about_app">О приложении</string>
    <string name="settings">Настройки</string>
    <string name="profile">Профиль</string>
    <string name="general">Основное</string>
    <string name="language">Язык</string>
    <string name="notification">Уведомления</string>
    <string name="autoplay_animation">Автоматическая анимация</string>
    <string name="background_settings">Фон Настроек</string>
    <string name="select_profile_photo">Выбрать фото профиля</string>
    <string name="online">Онлайн</string>
    <string name="typing">печатает…</string>
    <string name="holder_phone">8 928 147 16 42</string>
    <string name="coming_soon">Скоро</string>
    <string name="done">Готово</string>
    <string name="change_name_info" tools:ignore="TypographyDashes">Вы можете выбрать любое публичное имя пользователя Space Messenger. В этом случае другие люди смогут найти Вас по такому имени и связаться с вами.\n\nВы можете использовать символы a-z, а-я, 0-9 и подчёркивания. Минимальная длина - 5 символов.</string>
    <string name="short_name_error">Имя пользователя должно содержать не меньше 5 символов</string>
    <string name="check_login">Проверка имени пользователя…</string>
    <string name="not_valid_login">Имя пользователя уже занято.</string>
    <string name="valid_login">Имя пользователя свободно.</string>
    <string name="redact_login">Отредактировать логин</string>
    <string name="smile">Смайлик</string>
    <string name="need_permissions">Необходимо разрешение на камеру и медиаконтент</string>
    <string name="choose_photo">Выберите фотографию</string>
    <string name="picture_is_saved_to_the_gallery">Снимок сохранён в галерею</string>
    <string name="updating_photo">Обновление фотографии...</string>
    <string name="name">Имя</string>
    <string name="need_record_permission">Необходимо разрешение на запись аудио</string>
    <string name="record">Запись</string>
    <string name="delete_record">Удалить запись</string>
    <string name="release_to_delete">Отпустите, чтобы удалить</string>
    <string name="hold_to_record">Удерживайте для записи</string>
</resources>