<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentWallpaperRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/wallpapersAppbarLayout"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/wallpapersToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary_background"
            app:navigationIcon="@drawable/icon_back"
            app:title="@string/wallpapers"
            app:titleTextAppearance="@style/TitleToolbarTextAppearance"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/fragment_wallpapers_linear_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wallpapersAppbarLayout">

        <ImageView
            android:id="@+id/ivWallpapers1"
            android:layout_width="0dp"
            android:layout_height="@dimen/fragment_wallpapers_iv_margin_height"
            android:layout_marginEnd="@dimen/fragment_wallpapers_iv_margin_end"
            android:layout_weight="1"
            android:contentDescription="@string/wallpapers1"
            android:src="@drawable/background_1" />

        <ImageView
            android:id="@+id/ivWallpapers2"
            android:layout_width="0dp"
            android:layout_height="@dimen/fragment_wallpapers_iv_margin_height"
            android:layout_marginEnd="@dimen/fragment_wallpapers_iv_margin_end"
            android:layout_weight="1"
            android:contentDescription="@string/wallpapers2"
            android:src="@drawable/background_2" />

        <ImageView
            android:id="@+id/ivWallpapers3"
            android:layout_width="0dp"
            android:layout_height="@dimen/fragment_wallpapers_iv_margin_height"
            android:layout_weight="1"
            android:contentDescription="@string/wallpapers3"
            android:src="@drawable/background_3" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_wallpapers_linear_done_margin_top"
        android:orientation="horizontal"
        android:padding="@dimen/fragment_wallpapers_linear_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wallpapersAppbarLayout">

        <ImageView
            android:id="@+id/wallpaperDone1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/wallpapers3"
            android:src="@drawable/ic_done"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/wallpaperDone2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/wallpapers3"
            android:src="@drawable/ic_done"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/wallpaperDone3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/wallpapers3"
            android:src="@drawable/ic_done"
            android:visibility="invisible" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>